[gd_scene load_steps=13 format=2]

[ext_resource path="res://core/Cutscene.gd" type="Script" id=1]
[ext_resource path="res://assets/sfx/task_complete.wav" type="AudioStream" id=2]
[ext_resource path="res://core/utils/ChangeEngineSpeed.gd" type="Script" id=3]
[ext_resource path="res://core/PlayerManagedStateManager.tscn" type="PackedScene" id=4]
[ext_resource path="res://cutscenes/framework/CutsceneCamera.tscn" type="PackedScene" id=5]
[ext_resource path="res://actor_states/ManagedState.tscn" type="PackedScene" id=6]

[sub_resource type="Animation" id=1]
resource_name = "0"
length = 0.2
tracks/0/type = "method"
tracks/0/path = NodePath("AudioStreamPlayer")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ 0.0 ],
"method": "play"
} ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("ChangeEngineSpeed")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "enable"
} ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("PlayerManagedStateManager")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "disable_input"
} ]
}
tracks/3/type = "method"
tracks/3/path = NodePath("PlayerManagedStateManager")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "hide_player_hud"
} ]
}
tracks/4/type = "method"
tracks/4/path = NodePath("PlayerManagedStateManager")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "go_to_actor"
} ]
}
tracks/5/type = "method"
tracks/5/path = NodePath("CutsceneCamera")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ 0.0 ],
"method": "enable"
} ]
}

[sub_resource type="Animation" id=2]
length = 0.001

[sub_resource type="Animation" id=3]
length = 3.0
tracks/0/type = "method"
tracks/0/path = NodePath("ChangeEngineSpeed")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "disable"
} ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("PlayerManagedStateManager/CutsceneCamera")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.088621 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ 0.0 ],
"method": "enable"
} ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("CutsceneCamera")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ 0.0 ],
"method": "disable"
} ]
}

[sub_resource type="Animation" id=4]
resource_name = "SETUP"
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "fade_in"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "fade_out"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="TaskComplete" type="Node2D"]
script = ExtResource( 1 )
skippable = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "SETUP"
anims/0 = SubResource( 1 )
anims/SETUP = SubResource( 2 )
anims/end = SubResource( 3 )
next/0 = "end"

[node name="SkipCutsceneFade" type="CanvasLayer" parent="."]
layer = 128

[node name="AnimationPlayer" type="AnimationPlayer" parent="SkipCutsceneFade"]
autoplay = "SETUP"
anims/SETUP = SubResource( 4 )
anims/fade_in = SubResource( 5 )
anims/fade_out = SubResource( 6 )

[node name="ColorRect" type="ColorRect" parent="SkipCutsceneFade"]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
volume_db = -5.071
bus = "Sfx"

[node name="ChangeEngineSpeed" type="Node" parent="."]
script = ExtResource( 3 )
engine_speed = 0.1

[node name="CutsceneCamera" parent="." instance=ExtResource( 5 )]

[node name="PlayerManagedStateManager" parent="." instance=ExtResource( 4 )]
managed_state = ExtResource( 6 )

[node name="CutsceneCamera" parent="PlayerManagedStateManager" instance=ExtResource( 5 )]
current = true
zoom = Vector2( 1.4, 1.4 )
tween_duration = 1.0

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="animation_started" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_started"]
[connection signal="animation_finished" from="SkipCutsceneFade/AnimationPlayer" to="." method="_on_SkipCutsceneAnimationPlayer_finished"]
